# vehicle-imu-frame-alignment

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  full_drive_6654625875  full_drive_7104822000  main.cpp  offline-compile-time.cpp  offline-run-time-continuously.cpp  offline-run-time.cpp
examples/compile-time/: CMakeLists.txt  offline-compile-time.cpp
examples/data/: full_drive_1768835157882579625  full_drive_1769862630606462750  full_drive_1770136910079826652  full_drive_1770822740240657375  full_drive_1773398940443445829  full_drive_1773400214692011250  full_drive_1773401448863311125  full_drive_1773423250661456750  full_drive_1773434659325475750  full_drive_1773435993595773375  full_drive_1773440122656942000  full_drive_1773443695865843500  full_drive_1773445420854195250  full_drive_1773450789759947625  full_drive_1773452022651025625  full_drive_1773453255939224000  full_drive_1773454490789899750  full_drive_1773455534572012250  full_drive_1773456623757510125  full_drive_1773457710468625125  full_drive_1773458943680711375  full_drive_1773460177682916500  full_drive_1773484738534173500  full_drive_1773486182593489625  full_drive_1773488260777313125  full_drive_1773494588857947125  full_drive_1773495826693859375  full_drive_1773499400871677375  full_drive_1773501399800591750  full_drive_1773503478316933250  full_drive_1773504713643073750  full_drive_1773505968640767375  full_drive_1773508082013238375  full_drive_1773515326793473250  full_drive_1773529012186191125  full_drive_1773530827471390875  (+52 more)
(+7 files in other folders)
